[package]

name = "termios"
version = "0.0.5"
authors = ["David Cuddeback <david.cuddeback@gmail.com>"]
description = "Safe bindings for the termios library."
license = "MIT"
homepage = "https://github.com/dcuddeback/termios-rs"
repository = "https://github.com/dcuddeback/termios-rs.git"
readme = "README.md"
keywords = ["termios", "tty", "terminal", "posix"]

[dependencies]
libc = "0.1.5"
